force-app/main/default/objects/KDCE_MCEmailLog__c/KDCE_MCEmailLog__c.object-meta.xml
<CustomObject>
    <label>Email Log</label>
    <nameField>
        <displayFormat>EM-{00000000}</displayFormat>
        <label>Email Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>