force-app/main/default/objects/KDCE_MCEmailLog__c/fields/KDCE_AccountID__c.field-meta.xml
<CustomField>
    <fullName>KDCE_AccountID__c</fullName>
    <label>Account ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>