force-app/main/default/objects/KDCE_MCEmailLog__c/fields/KDCE_BounceCategory__c.field-meta.xml
<CustomField>
    <fullName>KDCE_BounceCategory__c</fullName>
    <label>Bounce Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>