force-app/main/default/objects/KDCE_MCEmailLog__c/fields/KDCE_Bounced__c.field-meta.xml
<CustomField>
    <fullName>KDCE_Bounced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bounced</label>
    <type>Checkbox</type>
</CustomField>