force-app/main/default/objects/KDCE_MCEmailLog__c/fields/KDCE_BouncedDateTime__c.field-meta.xml
<CustomField>
    <fullName>KDCE_BouncedDateTime__c</fullName>
    <label>Bounced Date/Time</label>
    <type>DateTime</type>
</CustomField>