force-app/main/default/objects/KDCE_MCEmailLog__c/fields/KDCE_BounceSubcategory__c.field-meta.xml
<CustomField>
    <fullName>KDCE_BounceSubcategory__c</fullName>
    <label>Bounce Subcategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>