force-app/main/default/objects/KDCE_MCEmailLog__c/fields/KDCE_BounceType__c.field-meta.xml
<CustomField>
    <fullName>KDCE_BounceType__c</fullName>
    <label>Bounce Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>