force-app/main/default/objects/KDCE_MCEmailLog__c/fields/KDCE_EmailClicked__c.field-meta.xml
<CustomField>
    <fullName>KDCE_EmailClicked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clicked</label>
    <type>Checkbox</type>
</CustomField>