force-app/main/default/objects/KDCE_MCEmailLog__c/fields/KDCE_EmailClickedDateTime__c.field-meta.xml
<CustomField>
    <fullName>KDCE_EmailClickedDateTime__c</fullName>
    <label>Clicked Date/Time</label>
    <type>DateTime</type>
</CustomField>