force-app/main/default/objects/KDCE_MCEmailLog__c/fields/KDCE_EmailName__c.field-meta.xml
<CustomField>
    <fullName>KDCE_EmailName__c</fullName>
    <label>Email Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>