force-app/main/default/objects/KDCE_MCEmailLog__c/fields/KDCE_EmailOpened__c.field-meta.xml
<CustomField>
    <fullName>KDCE_EmailOpened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opened</label>
    <type>Checkbox</type>
</CustomField>