force-app/main/default/objects/KDCE_MCEmailLog__c/fields/KDCE_EmailOpenedDateTime__c.field-meta.xml
<CustomField>
    <fullName>KDCE_EmailOpenedDateTime__c</fullName>
    <label>Opened Date/Time</label>
    <type>DateTime</type>
</CustomField>