force-app/main/default/objects/KDCE_MCEmailLog__c/fields/KDCE_EmailOptout__c.field-meta.xml
<CustomField>
    <fullName>KDCE_EmailOptout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Opt-out</label>
    <type>Checkbox</type>
</CustomField>