force-app/main/default/objects/KDCE_MCEmailLog__c/fields/KDCE_EmailOptoutDateTime__c.field-meta.xml
<CustomField>
    <fullName>KDCE_EmailOptoutDateTime__c</fullName>
    <label>Email Opt-out Date/Time</label>
    <type>DateTime</type>
</CustomField>