force-app/main/default/objects/KDCE_MCEmailLog__c/fields/KDCE_EmailSubject__c.field-meta.xml
<CustomField>
    <fullName>KDCE_EmailSubject__c</fullName>
    <label>Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>