force-app/main/default/objects/KDCE_MCEmailLog__c/fields/KDCE_EventDateTime__c.field-meta.xml
<CustomField>
    <fullName>KDCE_EventDateTime__c</fullName>
    <label>Event Date/Time</label>
    <type>DateTime</type>
</CustomField>