force-app/main/default/objects/KDCE_MCEmailLog__c/fields/KDCE_External_ID__c.field-meta.xml
<CustomField>
    <fullName>KDCE_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>외부 Key</description>
    <externalId>true</externalId>
    <inlineHelpText>Job ID + ContactID (SubscriptionKey)</inlineHelpText>
    <label>External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>