force-app/main/default/objects/KDCE_MCEmailLog__c/fields/KDCE_JobStatus__c.field-meta.xml
<CustomField>
    <fullName>KDCE_JobStatus__c</fullName>
    <label>Job Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>