force-app/main/default/objects/KDCE_MCEmailLog__c/fields/KDCE_SFDCErrorSubscriberCount__c.field-meta.xml
<CustomField>
    <fullName>KDCE_SFDCErrorSubscriberCount__c</fullName>
    <label>SFDC Error Subscriber Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>