force-app/main/default/objects/KDCE_MCEmailLog__c/fields/KDCE_SubscriberID__c.field-meta.xml
<CustomField>
    <fullName>KDCE_SubscriberID__c</fullName>
    <label>Subscriber ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>