force-app/main/default/objects/KDCE_MCEmailLog__c/fields/KDCE_SubscriberKey__c.field-meta.xml
<CustomField>
    <fullName>KDCE_SubscriberKey__c</fullName>
    <label>Subscriber Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>